#ifndef DICE_HPP
#define DICE_HPP

#include <cstdlib>

class Dice {
public:
    static int roll(int max);
};

#endif
