@startuml UML
skinparam classAttributeIconSize 0

'====================
' ENUMS
'====================
enum AttackType {
  LIGHT
  HEAVY
  MAGIC
}

enum ItemType {
  BONUS_LIFE
  BONUS_DAMAGE
}

'====================
' CLASSE DE BASE
'====================
class Entity {
  - name : string
  - life : int
  + Entity(name : string, life : int)
  + isAlive() : bool
  + getLife() : int
  + takeDamage(dmg : int) : void
}

'====================
' ATTAQUE
'====================
class Attack {
  - name : string
  - damage : int
  - manaCost : int
  - type : AttackType
  + Attack(name : string, damage : int, manaCost : int, type : AttackType)
  + getName() : string
  + getDamage() : int
  + getManaCost() : int
  + getType() : AttackType
}

'====================
' ENEMY
'====================
class Enemy {
  - race : string
  - emoji : string
  - rewardGold : int
  - attacks : vector<Attack>
  + Enemy(race : string)
  + getRace() : string
  + getEmoji() : string
  + getReward() : int
  + randomAttack() : Attack
}

Entity <|-- Enemy
Enemy "1" *-- "*" Attack

'====================
' ITEM / INVENTORY
'====================
class Item {
  - name : string
  - type : ItemType
  - value : int
  - price : int
  + Item(type : ItemType, value : int)
  + Item(name : string, type : ItemType, value : int, price : int)
  + getType() : ItemType
  + getValue() : int
  + getName() : string
  + getPrice() : int
  + getDescription() : string
}

class Inventory {
  - items : vector<Item>
  + addItem(item : Item) : void
  + show() : void
  + size() : int
  + getItem(index : int) : Item
  + remove(index : int) : void
}

Inventory "1" *-- "*" Item

'====================
' PLAYER
'====================
class Player {
  - x : int
  - y : int
  - gold : int
  - luck : int
  - mana : int
  - className : string
  - emoji : string
  - skipNextTurn : bool
  - inventory : Inventory
  - attacks : vector<Attack>

  + Player()
  + setPosition(x : int, y : int) : void
  + getX() : int
  + getY() : int
  + getLife() : int
  + takeDamage(dmg : int) : void
  + isAlive() : bool
  + chooseAttack(index : int) : Attack
  + heal(amount : int) : void
  + boostDamage(amount : int) : void
  + getMana() : int
  + useMana(cost : int) : bool
  + applyClass(choice : int) : void
  + getClassName() : string
  + getEmoji() : string
  + useItem(index : int) : void
  + getGold() : int
  + addGold(amount : int) : void
  + goldRef() : int&
  + getLuck() : int
}

Entity <|-- Player
Player "1" *-- "1" Inventory
Player "1" *-- "*" Attack

'====================
' MERCHANT
'====================
class Merchant {
  - stock : vector<Item>
  + Merchant()
  + show() : void
  + buy(choice : int, playerGold : int&, inv : Inventory&) : bool
}

Merchant "1" *-- "*" Item

'====================
' BOARD / MAP
'====================
class Board {
  - map : vector<string>
  - heroEmoji : string
  - enemyEmoji : string
  - itemEmoji : string
  - wallEmoji : string
  - floorEmoji : string
  + Board()
  + loadFromFile(filename : string) : void
  + display() : void
  + symbolToEmoji(c : char) : string
  + getCell(x : int, y : int) : char
  + setCell(x : int, y : int, c : char) : void
  + isInside(x : int, y : int) : bool
  + getWidth() : int
  + getHeight() : int
  + findHero(x : int&, y : int&) : void
  + countEnemies() : int
  + setHeroEmoji(e : string) : void
}

class Game {
    - Board board
    - Player player
    - Merchant merchant
    - int steps
    + Game()
    + void run()
    + void loop()
    + void chooseClass()
    + void doTurnMenu()
    + void moveWithDice()
    + void useItemMenu()
    + void openMerchant()
    + Item generateRandomItem()
    + bool movePlayer(int dx, int dy)
    + void combat(Enemy& enemy)
    + void loadMap(const string& filename)
    + void checkEndGame()
    + void showVictory()
    + void showGameOver()
}

Game --> Board
Game --> Player
Game --> Merchant
Game --> Dice
Game --> Item
Game --> Enemy

'====================
' UTILITAIRES
'====================
class Dice {
  + roll(max : int) : int
}

class Input {
  + init() : void
  + restore() : void
  + getKey() : char
}

Player ..> Dice
Game ..> Dice

@enduml
